@startuml база_данных

skinparam Linetype ortho

!define Table(name) class name
!define primary_key(x) <b>x</b>
!define unique(x) <color:green>x</color>
!define not_null(x) <u>x</u>
!define foreign_key(x) <color:red>x</color>

Table(city) {
    primary_key(city_id) SERIAL
    not_null(name) VARCHAR[300]
    }

Table(district) {
    primary_key(district_id) SERIAL
    not_null(foreign_key(city_id)) INTEGER
    not_null(name) VARCHAR[300]
    }

Table(poi) {
    primary_key(poi_id) SERIAL
    not_null(foreign_key(district_id)) INTEGER
    not_null(name) VARCHAR[300] 
}

Table(poi_category) {
    primary_key(id) SERIAL
    not_null(foreign_key(poi_id)) INTEGER
    not_null(category) VARCHAR[300] 
}

Table(poi_coordinates) {
    primary_key(id) SERIAL
    not_null(foreign_key(poi_id)) INTEGER
    not_null(latitude) DOUBLE PRECISION
    not_null(longitude) DOUBLE PRECISION  
}

Table(hotel_rating) {
    primary_key(id) SERIAL
    not_null(foreign_key(poi_id)) INTEGER
    rating DOUBLE PRECISION
    time TIMESTAMP DEFAULT NOW()
}

Table(hotel_stars) {
    primary_key(id) SERIAL
    not_null(foreign_key(poi_id)) INTEGER
    stars DOUBLE PRECISION
}

Table(poi_type) {
    primary_key(id) SERIAL
    not_null(foreign_key(poi_id)) INTEGER
    not_null(type) VARCHAR[300] 
}

' Table(poi_time) {
'     primary_key(id) SERIAL
'     not_null(foreign_key(poi_id)) INTEGER
'     opening_time TIME
'     closing_time TIME
' }

' Table(poi_duration) {
'     primary_key(id) SERIAL
'     not_null(foreign_key(poi_id)) INTEGER
'     duration INTEGER
' }

' Table(hotel_price) {
'     primary_key(id) SERIAL
'     not_null(foreign_key(poi_id)) INTEGER
'     price INTEGER
' }

city "1" <-- "*" district
district "1" <-- "*" poi
poi "1" --> "1" poi_coordinates
poi "*" --> "1" poi_category
poi "*" --> "1" poi_type
poi "*" --> "1" hotel_stars
poi "*" --> "1" hotel_rating
' poi "*" --> "1" poi_time
' poi "*" --> "1" poi_duration
' poi "*" --> "1" hotel_price

@enduml 
